--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -57,7 +57,10 @@
   	<div class="container">
   		<div class="row">
         <div class="col-lg-2">
-          <div><%= @presenter.filepicker(@event) %></div>
+          <div class="btn-group btn-group-vertical"><br>
+            <%= @presenter.filepicker(@event) %>
+            <%= @presenter.edit_button(@event) %>
+          </div>
         </div>
   			<div class="col-lg-10">
   				<div class="event-media-html">
