--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -173,6 +173,7 @@ footer {
 #info-page-content  {
   margin-top: 20px;
   padding: 40px;
+  height: 600px;
   background: white;
   box-shadow: 0 8px 50px rgba(0, 0, 0, 0.2);
 }
