tests passing at least

--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -14,6 +14,7 @@
       <p class="lead">Feel free to fork and use the code as you will - 100 Motels team.
       </p>
       <a class="btn btn-lg btn-default" href="//github.com/seocahill/100motels"><i class="fa fa-github"></i> View on github</a>
+      <%= link_to "home", root_path %>
     </div>
   </div>
 </div> <!-- /container​ -->
