--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -26,7 +26,7 @@
         </div>
         <div class="navbar-collapse collapse" style="height: 1px;">
           <ul class="nav navbar-nav navbar-left">
-            <p class="navbar-text"><%= @event.visible ? "visible to everyone" : "private to you" %></p>
+            <p class="navbar-text"><%= @event.visible ? "visible to everyone" : "visible only to you" %></p>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
