--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,25 +15,23 @@
     <div class="row">
       <div class="col-sm-6 col-md-4 col-md-offset-4">
         <span class="text-center login-title"><h1 class="">100 Motels</h1></span>
-        <div class="account-wall">
-            <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
-            <!-- <p class="profile-name">Bhaumik Patel</p> -->
-            <%= form_for @user, method: :post, html: { class: 'form-signin', role: "form" } do |f| %>
-              <div class="form-group">
-                <%#= f.label :email %>
-                <%= f.text_field :name, class: 'form-control', placeholder: "Name" %>
-              </div>
-              <div class="form-group">
-                <%#= f.label :email %>
-                <%= f.email_field :email, class: 'form-control', placeholder: "Email" %>
-              </div>
-              <div class="form-group">
-                <%#= f.label :password %>
-                <%= f.password_field :password, class: 'form-control', placeholder: "Password" %>
-              </div>
-              <%= f.submit "Sign Up", class: 'btn btn-primary btn-lg btn-block' %>
-            <%= link_to "sign-in instead", new_session_path, class: "need-help" %><span class="clearfix"></span>
-            <% end %>
+        <div class="account-wall text-center">
+          <span class="fa-stack fa-5x" >
+            <i style="color: rgba(10, 29, 58, 0.58);"  class="fa fa-user fa-stack-1x fa-inverse"></i>
+          </span>
+          <%= form_for @user, method: :post, html: { class: 'form-signin', role: "form" } do |f| %>
+            <div class="form-group">
+              <%= f.text_field :name, class: 'form-control', placeholder: "Name" %>
+            </div>
+            <div class="form-group">
+              <%= f.email_field :email, class: 'form-control', placeholder: "Email" %>
+            </div>
+            <div class="form-group">
+              <%= f.password_field :password, class: 'form-control', placeholder: "Password" %>
+            </div>
+            <%= f.submit "Sign Up", class: 'btn btn-primary btn-lg btn-block' %>
+          <%= link_to "sign-in instead", new_session_path, class: "need-help" %><span class="clearfix"></span>
+          <% end %>
         </div>
       </div>
     </div>
