--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-    	100 Motels - Tour the world without a record label.
+    	100 Motels - Fuck the world without a record label.
     </title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
